--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -17,11 +17,9 @@
             android:padding="10dp"
             app:flow_horizontalAlign="center"
             app:flow_verticalAlign="center"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintVertical_bias="0.035">
 
             <ImageView
@@ -94,10 +92,12 @@
         <ScrollView
             android:id="@+id/linkListLayout"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="270dp"
             android:layout_weight="1"
             android:fillViewport="true"
-            app:layout_constraintTop_toBottomOf="@id/profileLayout">
+            app:layout_constraintTop_toBottomOf="@id/profileLayout"
+            app:layout_constraintBottom_toTopOf="@id/addbtn"
+            >
 
 
             <androidx.recyclerview.widget.RecyclerView
@@ -106,21 +106,35 @@
                 android:layout_height="wrap_content"/>
 
 
+
+
         </ScrollView>
 
-        <Button
-            android:id="@+id/savebtn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:gravity="center_horizontal"
-            android:text="Save Changes"
-            android:layout_marginTop="20dp"
-            android:padding="10dp"
-            android:layout_marginHorizontal="10dp"
-            app:layout_constraintTop_toBottomOf="@id/linkListLayout"/>
 
 
+    <Button
+        android:id="@+id/addbtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Add New Link"
+        android:layout_marginTop="20dp"
+        android:padding="10dp"
+        android:backgroundTint="@color/lightGreen"
+        app:layout_constraintTop_toBottomOf="@id/linkListLayout"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"/>
+    <Button
+        android:id="@+id/savebtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:gravity="center_horizontal"
+        android:text="Save Changes"
+        android:layout_marginTop="20dp"
+        android:padding="10dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/addbtn"/>
 
 
 
