--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -103,9 +103,10 @@
     <ScrollView
         android:id="@+id/viewLinkLayout"
        android:layout_width="match_parent"
-       android:layout_height="0dp"
+        android:layout_height="410dp"
        android:layout_weight="1"
        android:fillViewport="true"
+        android:paddingTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/profileLayout">
 
 
@@ -117,6 +118,23 @@
 
    </ScrollView>
 
+
+    <Button
+        android:id="@+id/addLinkProfile"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:padding="5dp"
+        android:text="Add Link!"
+        android:textSize="20dp"
+        android:textColor="@color/white"
+        android:background="@drawable/rounded_corner"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/viewLinkLayout"
+        app:layout_constraintBottom_toBottomOf="parent"
+        style="?android:attr/borderlessButtonStyle"
+        android:visibility="invisible"/>
 
 
 
