--- a/app/src/main/res/layout/activity_create_post.xml
+++ b/app/src/main/res/layout/activity_create_post.xml
@@ -21,24 +21,34 @@
 
     <ImageView
         android:id="@+id/iv_Post_Image"
-        android:layout_width="270dp"
-        android:layout_height="480dp"
+        android:layout_width="180dp"
+        android:layout_height="320dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_header"
         android:layout_marginTop="10dp"
         />
-    
+
+    <EditText
+        android:id="@+id/et_enter_caption"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/iv_Post_Image"
+        android:layout_marginTop="10dp"
+        android:hint="Enter Caption"/>
+
     <Button
         android:id="@+id/btn_upload_image"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/iv_Post_Image"
+        app:layout_constraintTop_toBottomOf="@+id/et_enter_caption"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="10dp"
         android:text="Upload Image"/>
-    
+
     <Button
         android:id="@+id/btn_discard_post"
         android:layout_width="100dp"
