--- a/app/src/main/res/layout/timeline_item.xml
+++ b/app/src/main/res/layout/timeline_item.xml
@@ -4,48 +4,46 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:clickable="true"
-    android:focusable="true"
-    android:foreground="?selectableItemBackground"
-    app:cardCornerRadius="1dp">
-    
+    >
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:padding="15dp">
 
         <ImageView
             android:id="@+id/iv_image_post"
             android:layout_width="320dp"
             android:layout_height="320dp"
-            app:layout_constraintTop_toTopOf="parent"
+            android:src="@drawable/ic_profile_pic"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:src="@drawable/ic_profile_pic"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/btn_post_author"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/iv_image_post"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
+            android:background="@android:color/transparent"
+            android:gravity="left"
             android:padding="10dp"
             android:text="Username"
             android:textColor="@color/darkGreen"
-            android:background="@android:color/transparent"
-            android:gravity="left"/>
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/iv_image_post" />
 
         <TextView
             android:id="@+id/tv_post_caption"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/btn_post_author"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
+            android:gravity="left"
             android:padding="10dp"
             android:text="caption"
-            android:gravity="left"/>
-        
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btn_post_author" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
     
 </androidx.cardview.widget.CardView>
