--- a/app/src/main/res/layout/timeline_item.xml
+++ b/app/src/main/res/layout/timeline_item.xml
@@ -25,7 +25,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
-            android:gravity="left"
+            android:gravity="start"
             android:padding="10dp"
             android:text="Username"
             android:textColor="@color/darkGreen"
@@ -37,12 +37,30 @@
             android:id="@+id/tv_post_caption"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="left"
+            android:gravity="start"
             android:padding="10dp"
             android:text="caption"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/btn_post_author" />
+
+        <!--<LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintTop_toBottomOf="@+id/tv_post_caption"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginTop="10dp"
+            android:gravity="end">
+
+            <Button
+                android:id="@+id/btn_share_facebook"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Share to Facebook"/>
+
+        </LinearLayout>-->
 
     </androidx.constraintlayout.widget.ConstraintLayout>
     
