--- a/app/src/main/res/layout/timeline_item.xml
+++ b/app/src/main/res/layout/timeline_item.xml
@@ -44,7 +44,7 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/btn_post_author" />
 
-        <!--<LinearLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
@@ -56,11 +56,12 @@
 
             <Button
                 android:id="@+id/btn_share_facebook"
-                android:layout_width="wrap_content"
+                android:layout_width="100dp"
                 android:layout_height="wrap_content"
-                android:text="Share to Facebook"/>
+                android:text="Share to Facebook"
+                android:textSize="10sp"/>
 
-        </LinearLayout>-->
+        </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
     
